Fix [sc-4761]: toggle checkbox wherever you click on dropdown option
Fix applied for both column visibility and label-dropdown

--- a/libs/common/src/lib/label/label-dropdown/label-dropdown.component.html
+++ b/libs/common/src/lib/label/label-dropdown/label-dropdown.component.html
@@ -40,7 +40,7 @@
       *ngFor="let labelValue of labelValues"
       class="level2-option"
       [dontCloseOnSelect]="!single"
-      (selectOption)="onOptionSelection(labelValue)">
+      (selectOption)="onOptionSelection(labelValue, $event)">
       <ng-container *ngIf="single; else multiple">
         {{ labelValue.label }}
       </ng-container>
