Rename Insights menu by Named entities

--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -56,7 +56,7 @@
             routerLinkActive="active"
             class="nav-link">
             <pa-icon name="form"></pa-icon>
-            <span class="nav-link-title">{{ 'generic.insights' | translate }}</span>
+            <span class="nav-link-title">{{ 'generic.named-entities' | translate }}</span>
           </a>
           <a
             *ngIf="isSynonymsEnabled | async"
