[sc-4815] Update account type to be aligned with backend

--- a/apps/manager/src/app/account/account-detail/account-detail.component.html
+++ b/apps/manager/src/app/account/account-detail/account-detail.component.html
@@ -67,14 +67,14 @@
                 Business
               </mat-option>
               <mat-option
-                value="stash-pro"
+                value="stash-developer"
                 *ngIf="isRoot">
-                Pro
+                Developer
               </mat-option>
               <mat-option
-                value="stash-growth"
+                value="stash-startup"
                 *ngIf="isRoot">
-                Growth
+                Startup
               </mat-option>
             </mat-select>
           </mat-form-field>
