Fix Material theme + warning from resource-table style

--- a/libs/common/src/lib/resources/resource-list/resources-table.component.scss
+++ b/libs/common/src/lib/resources/resource-list/resources-table.component.scss
@@ -20,7 +20,7 @@
   .table-options {
     align-items: center;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin-left: auto;
   }
 }
