--- a/apps/manager/src/app/account/account-detail/account-detail.component.html
+++ b/apps/manager/src/app/account/account-detail/account-detail.component.html
@@ -8,14 +8,7 @@
       class="header"
       gdArea="header">
       <form [formGroup]="accountTitleForm">
-        <mat-form-field>
-          <h1>
-            Account:
-            <input
-              matInput
-              formControlName="id" />
-          </h1>
-        </mat-form-field>
+        <h1>Account: {{ accountTitleForm.controls.id.value }}</h1>
       </form>
       <div
         class="actions"
@@ -35,79 +28,66 @@
       <form [formGroup]="accountForm">
         <div class="section">
           <h3>Config</h3>
-          <mat-form-field>
-            <mat-label>Email address</mat-label>
-            <input
-              matInput
-              type="email"
-              required
-              formControlName="email"
-              placeholder="bob@example.org" />
-          </mat-form-field>
-          <mat-form-field>
-            <mat-label>Type</mat-label>
-            <mat-select
-              matNativeControl
-              required
-              formControlName="type">
-              <mat-option value="stash-basic">Basic</mat-option>
-              <mat-option
-                value="stash-team"
-                *ngIf="isRoot">
-                Teams
-              </mat-option>
-              <mat-option
-                value="stash-enterprise"
-                *ngIf="isRoot">
-                Enterprise
-              </mat-option>
-              <mat-option
-                value="stash-business"
-                *ngIf="isRoot">
-                Business
-              </mat-option>
-              <mat-option
-                value="stash-developer"
-                *ngIf="isRoot">
-                Developer
-              </mat-option>
-              <mat-option
-                value="stash-startup"
-                *ngIf="isRoot">
-                Startup
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-label>Available Knowledge boxes</mat-label>
-            <input
-              matInput
-              type="number"
-              formControlName="kbs"
-              placeholder="Knowledge boxes" />
-          </mat-form-field>
-          <mat-form-field>
-            <mat-label>Replicas indexer slow</mat-label>
-            <input
-              matInput
-              type="number"
-              formControlName="indexer_slow_replicas"
-              placeholder="Indexer slow replicas" />
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-label>Zone</mat-label>
-            <select
-              matNativeControl
-              required
-              formControlName="zone">
-              <option
-                *ngFor="let zone of zones"
-                [value]="zone.id">
-                {{ zone.title }}
-              </option>
-            </select>
-          </mat-form-field>
+          <pa-input
+            type="email"
+            required
+            formControlName="email"
+            placeholder="bob@example.org">
+            Email address
+          </pa-input>
+          <pa-select
+            required
+            label="Type"
+            formControlName="type">
+            <pa-option value="stash-basic">Basic</pa-option>
+            <pa-option
+              *ngIf="isRoot"
+              value="stash-team">
+              Teams
+            </pa-option>
+            <pa-option
+              *ngIf="isRoot"
+              value="stash-enterprise">
+              Enterprise
+            </pa-option>
+            <pa-option
+              *ngIf="isRoot"
+              value="stash-business">
+              Business
+            </pa-option>
+            <pa-option
+              *ngIf="isRoot"
+              value="stash-developer">
+              Developer
+            </pa-option>
+            <pa-option
+              *ngIf="isRoot"
+              value="stash-startup">
+              Startup
+            </pa-option>
+          </pa-select>
+          <pa-input
+            type="number"
+            formControlName="kbs"
+            placeholder="Knowledge boxes">
+            Available Knowledge boxes
+          </pa-input>
+          <pa-input
+            type="number"
+            formControlName="indexer_slow_replicas"
+            placeholder="Indexer slow replicas">
+            Replicas indexer slow
+          </pa-input>
+          <pa-select
+            required
+            formControlName="zone"
+            label="Zone">
+            <pa-option
+              *ngFor="let zone of zones"
+              [value]="zone.id">
+              {{ zone.title }}
+            </pa-option>
+          </pa-select>
         </div>
 
         <div
@@ -138,21 +118,16 @@
           </form>
 
           <h3>Info</h3>
-          <mat-form-field>
-            <mat-label>Creator</mat-label>
-            <input
-              matInput
-              formControlName="creator"
-              placeholder="Creator" />
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-label>Api URL</mat-label>
-            <input
-              matInput
-              formControlName="url"
-              placeholder="Url" />
-          </mat-form-field>
+          <pa-input
+            formControlName="creator"
+            placeholder="Creator">
+            Creator
+          </pa-input>
+          <pa-input
+            formControlName="url"
+            placeholder="Url">
+            Api URL
+          </pa-input>
         </div>
         <div
           fxLayout="row"
@@ -170,195 +145,184 @@
       *ngIf="edit"
       gdArea="content"
       style="position: relative">
-      <mat-tab-group
-        mat-align-tabs="start"
-        (selectedTabChange)="onTabSelection($event)">
-        <mat-tab label="Users">
-          <div
-            fxLayout="column"
-            fxLayoutAlign="start start"
-            class="content_area"
-            *ngIf="this.account?.id">
-            <h3>Account Users</h3>
+      <pa-tabs notFullWidth>
+        <pa-tab
+          [active]="selectedTab === 'users'"
+          (click)="onTabSelection('users')">
+          Users
+        </pa-tab>
+        <pa-tab
+          [active]="selectedTab === 'kbs'"
+          (click)="onTabSelection('kbs')">
+          Knowledge boxes
+        </pa-tab>
+        <pa-tab
+          [active]="selectedTab === 'limits'"
+          (click)="onTabSelection('limits')">
+          Limits
+        </pa-tab>
+      </pa-tabs>
 
-            <div class="actual-user">
-              <form [formGroup]="searchUserForm">
-                <h4>Search and Add to Account</h4>
-                <div
-                  class="search-user"
-                  fxLayout="row"
-                  fxLayoutAlign="space-between center">
-                  <stf-input formControlName="user">User</stf-input>
-                  <button
-                    mat-icon-button
-                    (click)="search()">
-                    <mat-icon>search</mat-icon>
-                  </button>
-                </div>
-                <div *ngIf="userSearchList.length === 0">No results</div>
-                <div
-                  *ngFor="let user of userSearchList"
-                  class="users_list">
-                  <span class="user_desc">
-                    {{ user['id'] }} - {{ user['email'] }} - {{ user['name'] }} - {{ user['provider'] }}
-                  </span>
-                  <button
-                    mat-icon-button
-                    (click)="addSeachedUser(user['id'])">
-                    <mat-icon>add</mat-icon>
-                  </button>
-                </div>
-              </form>
+      <div
+        *ngIf="selectedTab === 'users' && !!account?.id"
+        fxLayout="column"
+        fxLayoutAlign="start start"
+        class="content_area">
+        <h3>Account Users</h3>
+
+        <div class="actual-user">
+          <form [formGroup]="searchUserForm">
+            <h4>Search and Add to Account</h4>
+            <div
+              class="search-user"
+              fxLayout="row"
+              fxLayoutAlign="space-between center">
+              <pa-input formControlName="user">User</pa-input>
+              <pa-button
+                icon="search"
+                aspect="basic"
+                (click)="search()"></pa-button>
+            </div>
+            <div *ngIf="userSearchList.length === 0">No results</div>
+            <div
+              *ngFor="let user of userSearchList"
+              class="users_list">
+              <span class="user_desc">
+                {{ user['id'] }} - {{ user['email'] }} - {{ user['name'] }} - {{ user['provider'] }}
+              </span>
+              <pa-button
+                icon="plus"
+                (click)="addSeachedUser(user['id'])"></pa-button>
+            </div>
+          </form>
+        </div>
+
+        <h4>Actual Account Users</h4>
+        <ul>
+          <li *ngFor="let user of account.users">
+            <pa-button
+              icon="trash"
+              aspect="basic"
+              kind="destructive"
+              (click)="deleteUser(user.id)"></pa-button>
+            <pa-button
+              icon="edit"
+              aspect="basic"
+              [routerLink]="['/users/' + user.id]"></pa-button>
+            <pa-button
+              *ngIf="account.managers.indexOf(user.id) === -1"
+              aspect="basic"
+              icon="user"
+              (click)="setAdminStashifyUser(user.id)"></pa-button>
+
+            <pa-button
+              *ngIf="account.managers.indexOf(user.id) >= 0"
+              aspect="basic"
+              icon="shield-check"
+              (click)="delAdminStashifyUser(user.id)"></pa-button>
+
+            <span>{{ user.name }} {{ user.email }}</span>
+          </li>
+        </ul>
+      </div>
+
+      <div
+        *ngIf="selectedTab === 'kbs' && !!account && !!account.stashes"
+        fxLayout="column"
+        fxLayoutAlign="start start"
+        class="content_area">
+        <h3>Knowledge boxes {{ account.type }} max:{{ account.stashes.max_stashes }}</h3>
+
+        <ul class="stash">
+          <li *ngFor="let stash of account.stashes.items">
+            {{ stash.slug }}
+            <div class="body-s">
+              {{ stash.title }} –
+              <small>{{ stash.id }}</small>
+              <ng-container *ngIf="kbResourceCount[stash.id] !== undefined">
+                <br />
+                {{ kbResourceCount[stash.id] }} resources
+              </ng-container>
             </div>
 
-            <h4>Actual Account Users</h4>
-            <ul>
-              <li *ngFor="let user of this.account.users">
-                <button
-                  mat-icon-button
-                  (click)="deleteUser(user.id)">
-                  <mat-icon>delete</mat-icon>
-                </button>
-                <button
-                  mat-icon-button
-                  [routerLink]="['/users/' + user.id]">
-                  <mat-icon>input</mat-icon>
-                </button>
-                <button
-                  mat-icon-button
-                  *ngIf="this.account.managers.indexOf(user.id) === -1"
-                  (click)="setAdminStashifyUser(user.id)">
-                  <mat-icon>accessibility</mat-icon>
-                </button>
-                <button
-                  mat-icon-button
-                  *ngIf="this.account.managers.indexOf(user.id) >= 0"
-                  (click)="delAdminStashifyUser(user.id)">
-                  <mat-icon>verified_user</mat-icon>
-                </button>
-                <span>{{ user.name }} {{ user.email }}</span>
-              </li>
-            </ul>
-          </div>
-        </mat-tab>
-        <mat-tab label="Knowledge boxes">
-          <div
-            fxLayout="column"
-            fxLayoutAlign="start start"
-            class="content_area"
-            *ngIf="this.account && this.account.stashes">
-            <h3>Knowledge boxes {{ this.account.type }} max:{{ this.account.stashes.max_stashes }}</h3>
-            <mat-accordion>
-              <mat-expansion-panel
-                class="stash"
-                *ngFor="let stash of this.account.stashes.items">
-                <mat-expansion-panel-header>
-                  <mat-panel-title>
-                    {{ stash.slug }}
-                  </mat-panel-title>
-                  <mat-panel-description>
-                    {{ stash.title }}
-                    – {{ stash.id }}
-                    <ng-container *ngIf="kbResourceCount[stash.id] !== undefined">
-                      <br />
-                      {{ kbResourceCount[stash.id] }} resources
-                    </ng-container>
-                  </mat-panel-description>
-                </mat-expansion-panel-header>
-                <pa-button
-                  kind="primary"
-                  size="small"
-                  (click)="goToStash(stash.id)">
-                  Edit
-                </pa-button>
-              </mat-expansion-panel>
-            </mat-accordion>
-            <div class="new_stash">
-              <form [formGroup]="newStashForm">
-                <mat-form-field>
-                  <mat-label>Id</mat-label>
-                  <input
-                    matInput
-                    formControlName="id" />
-                </mat-form-field>
+            <pa-button
+              aspect="basic"
+              size="small"
+              icon="edit"
+              (click)="goToStash(stash.id)">
+              Edit
+            </pa-button>
+          </li>
+        </ul>
 
-                <mat-form-field>
-                  <mat-label>Title</mat-label>
-                  <input
-                    matInput
-                    formControlName="title" />
-                </mat-form-field>
-                {{ stashmessage }}
-                <pa-button
-                  style="margin-top: 16px"
-                  kind="primary"
-                  (click)="newStash()">
-                  New
-                </pa-button>
-              </form>
+        <div class="new_stash">
+          <h5>Create new KB</h5>
+          <form [formGroup]="newStashForm">
+            <pa-input formControlName="id">Id</pa-input>
+            <pa-input formControlName="title">Title</pa-input>
+
+            {{ stashmessage }}
+            <pa-button
+              style="margin-top: 16px"
+              kind="primary"
+              [disabled]="account.stashes.max_stashes <= account.stashes.items.length"
+              (click)="newStash()">
+              New
+            </pa-button>
+          </form>
+        </div>
+      </div>
+
+      <div
+        *ngIf="selectedTab === 'limits' && !!account"
+        class="content_area limits">
+        <form [formGroup]="limitsForm">
+          <div class="section">
+            <h3>Limits</h3>
+            <div formGroupName="upload">
+              <h4>Upload</h4>
+              <pa-input
+                type="number"
+                required
+                formControlName="upload_limit_max_media_file_size">
+                Media file max size (bytes)
+              </pa-input>
+
+              <pa-input
+                type="number"
+                required
+                formControlName="upload_limit_max_non_media_file_size">
+                Non-media file max size (bytes)
+              </pa-input>
+            </div>
+            <div formGroupName="processing">
+              <h4>Processing</h4>
+              <pa-input
+                type="number"
+                required
+                help="Max number of processed characters monthly"
+                formControlName="monthly_limit_chars_processed">
+                Processed characters
+              </pa-input>
+
+              <pa-input
+                type="number"
+                required
+                help="Media files max processing time monthly (seconds)"
+                formControlName="monthly_limit_media_seconds_processed">
+                Media processing time
+              </pa-input>
+              <pa-input
+                type="number"
+                required
+                help="Non-media files max processing time monthly (seconds)"
+                formControlName="monthly_limit_non_media_files_processed">
+                Non-media processing time
+              </pa-input>
             </div>
           </div>
-        </mat-tab>
-        <mat-tab label="Limits">
-          <div
-            fxLayout="column"
-            fxLayoutAlign="start start"
-            class="content_area"
-            *ngIf="this.account">
-            <form [formGroup]="limitsForm">
-              <div class="section">
-                <h3>Limits</h3>
-                <div formGroupName="upload">
-                  <h4>Upload</h4>
-                  <mat-form-field>
-                    <mat-label>Media file max size (bytes)</mat-label>
-                    <input
-                      matInput
-                      type="number"
-                      required
-                      formControlName="upload_limit_max_media_file_size" />
-                  </mat-form-field>
-                  <mat-form-field>
-                    <mat-label>Non-media file max size (bytes)</mat-label>
-                    <input
-                      matInput
-                      type="number"
-                      required
-                      formControlName="upload_limit_max_non_media_file_size" />
-                  </mat-form-field>
-                </div>
-                <div formGroupName="processing">
-                  <h4>Processing</h4>
-                  <mat-form-field>
-                    <mat-label>Max number of processed characters monthly</mat-label>
-                    <input
-                      matInput
-                      type="number"
-                      required
-                      formControlName="monthly_limit_chars_processed" />
-                  </mat-form-field>
-                  <mat-form-field>
-                    <mat-label>Media files max processing time monthly (seconds)</mat-label>
-                    <input
-                      matInput
-                      type="number"
-                      required
-                      formControlName="monthly_limit_media_seconds_processed" />
-                  </mat-form-field>
-                  <mat-form-field>
-                    <mat-label>Non-media files max processing time monthly (seconds)</mat-label>
-                    <input
-                      matInput
-                      type="number"
-                      required
-                      formControlName="monthly_limit_non_media_files_processed" />
-                  </mat-form-field>
-                </div>
-              </div>
-            </form>
-          </div>
-        </mat-tab>
-      </mat-tab-group>
+        </form>
+      </div>
     </div>
     <div
       class="box"
