--- a/apps/manager/src/app/zone/zone-list/zone-list.component.html
+++ b/apps/manager/src/app/zone/zone-list/zone-list.component.html
@@ -1,12 +1,12 @@
 <div
   fxLayout="row"
   fxLayoutAlign="start center">
-  <stf-input
+  <pa-input
     fxFlex="80%"
     (keyup)="applyFilter($event.target.value)"
     placeholder="Filter">
     Filter
-  </stf-input>
+  </pa-input>
   <div
     fxLayout="row"
     fxLayoutAlign="center center">
@@ -92,18 +92,19 @@
       <td
         mat-cell
         *matCellDef="let zone">
-        <button
-          mat-icon-button
-          aria-label="Edit"
+        <pa-button
+          icon="edit"
+          aspect="basic"
           (click)="editZone(zone)">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button
-          mat-icon-button
-          aria-label="Delete"
+          edit
+        </pa-button>
+        <pa-button
+          icon="delete"
+          aspect="basic"
+          kind="destructive"
           (click)="deleteZone(zone.id)">
-          <mat-icon>delete</mat-icon>
-        </button>
+          Delete
+        </pa-button>
       </td>
     </ng-container>
 
@@ -114,6 +115,4 @@
       mat-row
       *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
-
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
