--- a/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
+++ b/apps/dashboard/src/app/account/billing/checkout/checkout.component.html
@@ -243,7 +243,7 @@
         </div>
         <pa-button
           (click)="subscribe()"
-          [disabled]="editCustomer || editCard || budget.invalid"
+          [disabled]="editCustomer || editCard || budget.invalid || subscribing"
           kind="primary">
           {{ 'Subscribe' | translate }}
         </pa-button>
